# Linux

./: README.md
4GPIDAPP/PIPE/: Debug.h  config.sh
Application/UART/: Makefile  Makefile.am  Makefile.in  UartTest.c  automake.sh  config.status  configure  configure.in  configure.scan  includes.h  main.c  make.sh  uart.c  usart
Application/UART/RCS_Protocol/: Makefile  Makefile.am  Makefile.in  RAE_Util.c  RAE_Util.h  RCS.c  RCS_Executer.c  RCS_Host_Sensor.c  SenRelatedDef.h  Sensor.c  Sensor.h
Application/UART/RCS_Protocol/.deps/: RAE_Util.Po  RCS.Po  RCS_Executer.Po  RCS_Host_Sensor.Po  RCS_Parser.Po  RCS_Resp_Sensor.Po  Sensor.Po
Function/: Key.txt  MFG tool相关.txt  NFS版本不兼容问题解决办法.txt  QT 远程调试.txt  Record.md  Upate uboot zImage Dtb in Kernal.txt  Upate uboot zImage Dtb in Ubootl.txt  getPhyReg.c  net rootfs.txt  uboot lgo.txt  发现.txt  启动方式.txt  开发板设置固定IP 自动挂载NFS节点.txt  调试方法.txt
Function/CPU频率相关/: CPU 频率打印记录.txt  CPU频率相关.txt
Function/Git 操作步骤/: Git 操作步骤.txt
Function/Linux开机log和进度条/: readme.txt
RCS_PIPE/: Debug.h  clean.sh  config.sh
TestAutoMake/3_Case/Helloword/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.in  configure.scan  main.c
TestAutoMake/3_Case/Helloword/.deps/: main.Po
TestAutoMake/3_Case/Helloword/SayBay/: Makefile  Makefile.am  Makefile.in  Saybye.c  Saybye.h
TestAutoMake/3_Case/Helloword/SayBay/.deps/: Saybye.Po
TestAutoMake/3_Case/Helloword/SayHello/: Makefile  Makefile.am  SayHello.c
TestAutoMake/3_Case/Helloword/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
(+157 files in other folders)
