AUTOMAKE_OPTIONS=foreign

AM_CPPFLAGS=-I./../

noinst_LIBRARIES=libRCS_Protocol.a

libRCS_Protocol_a_SOURCES=RCS_Executer.c \
                          RCS_Executer.h \
                          RCS_Parser.h \
                          RCS_Parser.c \
                          RCS.c \
                          RCS.h \
                          RCS_Resp_Sensor.h \
                          RCS_Resp_Sensor.c \
                          RCS_Host_Sensor.c \
                          RCS_Host_Sensor.h \
                          Sensor.c \
                          Sensor.h \
                          SenRelatedDef.h \
                          RAE_Util.h \
                          RAE_Util.c
